--- a/Quran/settings.gradle
+++ b/Quran/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Quran"
+rootProject.name = "Quran App"
 include ':app'
